# internal/handler/response.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"encoding/json"
+	"log"
 	"net/http"
 	"segmenter/internal/domain"
 )
@@ -14,14 +15,24 @@ type getSegmentsResponse struct {
 	Data []domain.Segment `json:"segments"`
 }
 
+type statusResponse struct {
+	Status string `json:"status"`
+}
+
 func newErrorResponse(w http.ResponseWriter, msg string, status int) {
-	resp, _ := json.Marshal(errorResponse{msg}) //nolint:errcheck
+	resp, err := json.Marshal(errorResponse{msg}) //nolint:errcheck
+	if err != nil {
+		log.Println(err.Error())
+	}
 	w.WriteHeader(status)
 	w.Write(resp) //nolint:errcheck
 }
 
 func newGetSegmentsResponse(w http.ResponseWriter, segments []domain.Segment, status int) {
-	resp, _ := json.Marshal(getSegmentsResponse{segments}) //nolint:errcheck
+	resp, err := json.Marshal(getSegmentsResponse{segments}) //nolint:errcheck
+	if err != nil {
+		log.Println(err.Error())
+	}
 	w.WriteHeader(status)
 	w.Write(resp) //nolint:errcheck
 }
